--- a/about-us.html
+++ b/about-us.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
 
+<html lan="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>About Us</title>
+    <link rel='stylesheet' href='styles.css'/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>MatDalorian Fan</title>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href='https://fonts.googleapis.com/css?family=Akronim' rel='stylesheet'>
+  </head>
+
+  <body id="page-top1">
+    <!-- Navigation-->
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav1">
+          <div class="container px-4 px-lg-5">
+              <a class="navbar-brand mat_name" href="#page-top">MatDalorian Fan</a>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                  Menu
+                  <i class="fas fa-bars"></i>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarResponsive">
+                  <style>
+                      li {
+                            display: inline;
+                            text-align: center;
+                            padding: 25px;
+                      }
+                  </style>
+                  <ul class="navbar-nav ms-auto">
+                      <li class="nav-item"><a class="nav-link" href="#scenes">Scenes</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#announcements">Announcements</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+    <div class="about-us">
+      <div class="top-menu"></div>
+      <div class="about-us-section about-person1">
+        <div class="about-item picture"></div>
+        <div class="about-item text-part"></div>
+      </div>
+      <div class="person-divider"></div>
+      <div class="about-us-section about-person2">
+        <div class="about-item picture"></div>
+        <div class="about-item text-part">
+          <p>Honestly I really just wanted to see what would happen if I put
+          text here.</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
