--- a/about-us.html
+++ b/about-us.html
@@ -43,30 +43,27 @@
               </div>
           </div>
       </nav>
-<<<<<<< HEAD
     <div class="top-menu"></div>
     <div class="about-us">
-=======
-    <div class="about-us">
-      <div class="top-menu"></div>
->>>>>>> 46cb55e821cf8357cf48d3319936a8f07cc1cbe6
       <div class="about-us-section about-person1">
-        <div class="about-item picture"></div>
-        <div class="about-item text-part"></div>
+        <div class="about-item picture1">
+          <!-- Your Picture Goes Here -->
+        </div>
+        <div class="about-item text-part">
+          <!-- Your Bio Goes Here -->
+        </div>
       </div>
-<<<<<<< HEAD
       <div class="about-us-section about-person2">
-        <div class="about-item picture"></div>
+        <div class="about-item picture2">
+          <img class="about-me-picture" width="100%" height="100% "src="about-me.jpg"/>
+        </div>
         <div class="about-item text-part">
-          <p class="text-part">Honestly I really just wanted to see what would happen if I put
-=======
-      <div class="person-divider"></div>
-      <div class="about-us-section about-person2">
-        <div class="about-item picture"></div>
-        <div class="about-item text-part">
-          <p>Honestly I really just wanted to see what would happen if I put
->>>>>>> 46cb55e821cf8357cf48d3319936a8f07cc1cbe6
-          text here.</p>
+          <p class="text-white-50 mx-auto mt-2 mb-5 text-left">Matthew Kennedy
+          grew up in Farmington, Utah, as the second of four kids. He graduated from
+          Bountiful High School with an IB diploma, and served a mission in the
+          California Ventura Mission. He has been a dedicated Star Wars nerd for
+          his whole life, and has collected an impressive number of Star Wars Lego
+          sets and video games.</p>
         </div>
       </div>
     </div>
