--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8"/>
     <title>About Us</title>
     <link rel='stylesheet' href='styles.css'/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>MatDalorian Fan</title>
@@ -22,48 +23,49 @@
     <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav1">
           <div class="container px-4 px-lg-5">
-              <a class="navbar-brand mat_name" href="#page-top">MatDalorian Fan</a>
+              <a class="navbar-brand mat_name" href="index.html">MatDalorian Fan</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   Menu
                   <i class="fas fa-bars"></i>
               </button>
               <div class="collapse navbar-collapse" id="navbarResponsive">
-                  <style>
-                      li {
-                            display: inline;
-                            text-align: center;
-                            padding: 25px;
-                      }
-                  </style>
                   <ul class="navbar-nav ms-auto">
-                      <li class="nav-item"><a class="nav-link" href="#scenes">Scenes</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#announcements">Announcements</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                    <li class="li1 nav-item"><a class="nav-link" href="https://ec2-54-219-34-79.us-west-1.compute.amazonaws.com/upcoming.html">Upcoming Events</a></li>
+                    <li class="li1 nav-item"><a class="nav-link" href="https://ec2-54-219-34-79.us-west-1.compute.amazonaws.com/index.html">Home</a></li>
+                    <li class="li1 nav-item"><a class="nav-link" href="https://ec2-54-219-34-79.us-west-1.compute.amazonaws.com/about-us.html">About Us</a></li>
                   </ul>
               </div>
           </div>
       </nav>
-    <div class="top-menu"></div>
-    <div class="about-us">
-      <div class="about-us-section about-person1">
-        <div class="about-item picture1">
-          <!-- Your Picture Goes Here -->
+    <div class="about-page">
+      <div class="top-menu"></div>
+      <div class="about-us">
+        <div class="about-us-section about-person1">
+          <div class="about-item picture1">
+            <img class="about-me-picture" width="100%" height="100% "src="about-me.jpg"/>
+          </div>
+          <div class="about-item text-part">
+            <!-- Your Bio Goes Here -->
+            <p class="text-white-50 mx-auto mt-2 mb-5 text-left">Matthew Kennedy
+            grew up in Farmington, Utah, as the second of four kids. He graduated from
+            Bountiful High School with an IB diploma, and served a mission in the
+            </p>
+          </div>
         </div>
-        <div class="about-item text-part">
-          <!-- Your Bio Goes Here -->
-        </div>
-      </div>
-      <div class="about-us-section about-person2">
-        <div class="about-item picture2">
-          <img class="about-me-picture" width="100%" height="100% "src="about-me.jpg"/>
-        </div>
-        <div class="about-item text-part">
-          <p class="text-white-50 mx-auto mt-2 mb-5 text-left">Matthew Kennedy
-          grew up in Farmington, Utah, as the second of four kids. He graduated from
-          Bountiful High School with an IB diploma, and served a mission in the
-          California Ventura Mission. He has been a dedicated Star Wars nerd for
-          his whole life, and has collected an impressive number of Star Wars Lego
-          sets and video games.</p>
+
+
+        <div class="about-us-section about-person2">
+          <div class="about-item picture2">
+            <img class="about-me-picture" width="100%" height="100% "src="about-me.jpg"/>
+          </div>
+          <div class="about-item text-part">
+            <p class="text-white-50 mx-auto mt-2 mb-5 text-left">Matthew Kennedy
+            grew up in Farmington, Utah, as the second of four kids. He graduated from
+            Bountiful High School with an IB diploma, and served a mission in the
+            California Ventura Mission. He has been a dedicated Star Wars nerd for
+            his whole life, and has collected an impressive number of Star Wars Lego
+            sets and video games.</p>
+          </div>
         </div>
       </div>
     </div>
